Issue #440: wrapping in code blocks makes code unreadable

--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -16,7 +16,7 @@
   margin-bottom: 1.33rem;
   overflow: auto;
   border-radius: 0.3rem;
-  white-space: pre-wrap;
+  white-space: nowrap;
   word-break: break-word;
   /* fallback when Shiki encounters unknown syntax */
   color: var(--g2);
@@ -42,4 +42,10 @@
   overflow-wrap: break-word;
   min-width: auto;
   border-radius: 0.25rem;
+}
+
+@media only screen and (min-width:48em) {
+  .docs pre {
+    white-space: pre-wrap;
+  }
 }
